# uwsim_underwater_simulation

./: .gitignore  SITL_README.md
dynamics_stack/: AUVDynamics.cpp  AUVDynamics.hpp  AttitudeController.cpp  AttitudeController.hpp  PositionController.cpp  PositionController.hpp  Sensor.cpp  Sensor.hpp  attitude_controller.yaml  dynamics_math_helper.hpp
dynamics_stack/unit_sim/: CMakeLists.txt  Control_Test.py  unit_sim.cpp  unit_sim.hpp
dynamics_stack/unit_sim/Install/config/: dynamics_dolphin.yaml
dynamics_stack/unit_sim/Install/data/: dynamics_output.txt  generic_input.txt
dynamics_stack/unit_sim/Install/rel/: unit_sim
dynamics_stack/unit_sim_dynamics_only/: CMakeLists.txt  main.cpp  unit_sim.cpp  unit_sim.hpp
dynamics_stack/unit_sim_dynamics_only/Install/config/: attitude_controller.yaml  dynamics_dolphin.yaml  uwsim_sensor.yaml
dynamics_stack/unit_sim_dynamics_only/Install/data/: acontroller_output.txt  dynamics_output.txt  dynamics_param_output_Cv.txt  dynamics_param_output_Dv.txt  dynamics_param_output_g.txt  dynamics_param_output_tau.txt  dynamics_power_output.txt  generic_input.txt  pcontroller_output.txt  sensor_output.txt
dynamics_stack/unit_sim_nonreal/: CMakeLists.txt  main.cpp  unit_sim.cpp  unit_sim.hpp
dynamics_stack/unit_sim_nonreal/Install/config/: attitude_controller.yaml  dynamics_dolphin.yaml  position_controller.yaml
dynamics_stack/unit_sim_nonreal/Install/data/: acontroller_output.txt  dynamics_output.txt  dynamics_param_output_Cv.txt  dynamics_param_output_Dv.txt  dynamics_param_output_Mv.txt  dynamics_param_output_g.txt  dynamics_param_output_tau.txt  dynamics_power_output.txt  generic_input.txt  pcontroller_output.txt  sensor_output.txt
scripts/: SimulationTest.ipynb  Simulation_Dynamics_Only.ipynb  Simulation_Dynamics_Only_Analysis.ipynb  Simulation_Dynamics_Only_Analysis_WithSensor.ipynb  Simulation_Dynamics_Only_WIthSensor.ipynb  SymPy_Rotation.ipynb  gen_commands_motors.py  gen_commands_trpy.py  legend.html  mAUV_Performance.ipynb  plotjugglerlayout.xml  resetdynamics.sh  simulation_pyqt.py  simulation_pyqt_ros.py  somedata.csv
scripts/Pickles/Agility/: Dynamics_30D_30P_RealJ_TimeSeries_PitchOnly_Agility  Dynamics_30D_30P_RealJ_TimeSeries_RollOnly_Agility  Dynamics_30D_30P_RealJ_TimeSeries_SurgeOnly_Agility  Dynamics_30D_30P_RealJ_TimeSeries_YawOnly_Agility
scripts/Pickles/Dynamics_only/: Dynamics_30D_20P_IdealJ_TimeSeries_PitchOnly  Dynamics_30D_20P_IdealJ_TimeSeries_SurgeOnly  Dynamics_30D_20P_IdealJ_TimeSeries_YawOnly  Dynamics_30D_20P_InPipeJ_TimeSeries_SurgeOnly  Dynamics_30D_20P_RealJ_Mv_PitchOnly  Dynamics_30D_20P_RealJ_TimeSeries_PitchOnly  Dynamics_30D_20P_RealJ_TimeSeries_SurgeOnly  Dynamics_30D_20P_RealJ_TimeSeries_YawOnly
scripts/Pickles/Dynamics_with_sensor/: Dynamics_30D_20P_RealJ_TimeSeries_MixedOnly_wsensor  Dynamics_30D_20P_RealJ_TimeSeries_PitchOnly_wsensor  Dynamics_30D_20P_RealJ_TimeSeries_RollOnly_wsensor  Dynamics_30D_20P_RealJ_TimeSeries_SurgeOnly_wsensor  Dynamics_30D_20P_RealJ_TimeSeries_YawOnly_wsensor
underwater_vehicle_dynamics/: CMakeLists.txt  package.xml
underwater_vehicle_dynamics/config/: dynamics_dolphin.yaml
underwater_vehicle_dynamics/launch/: dolphin_dynamics_test.launch  dolphin_dynamics_test_display.launch
underwater_vehicle_dynamics/msg/: dynamics_param.msg
underwater_vehicle_dynamics/src/: dynamics.py  dynamics_dolphin.py  keyboard.py
underwater_vehicle_dynamics/src/tests/: dynamics_dolphin_test.py  dynamics_dolphin_test_display.py
underwater_vehicle_dynamics/src/tests/data/: dynamics_output.csv  gen_thruster_input_data.py  thrusters_input.txt
uwsim/data/scenes/: dolphin.urdf  dolphin.urdf.xacro  pipeFollowing_basic_dolphin.xml  pipeFollowing_turns.xml  xacroExample.xml
uwsim/include/uwsim/: SimulatorConfig.h
uwsim/src/: VirtualCamera.cpp  VirtualSLSProjector.cpp
uwsim_control/: CMakeLists.txt  package.xml
uwsim_control/include/uwsim_control/: px4_compatibility.hpp
uwsim_control/launch/: uwsim_control.launch  uwsim_control_noosg.launch
uwsim_control/src/: uwsim_control.cpp  uwsim_control_cp.cpp
uwsim_dynamics/: CMakeLists.txt  mainpage.dox  package.xml
uwsim_dynamics/config/: dynamics_dolphin.yaml
uwsim_dynamics/include/: dynamics_node.hpp
uwsim_dynamics/launch/: UWSim_g500_dynamics.launch  dolphin_dynamics.launch  dolphin_dynamics_py.launch  dolphin_dynamics_test.launch  dolphin_dynamics_test_display.launch  dynamics.launch  uwsim_dolphin_dynamics.launch  uwsim_dolphin_dynamics_noosg.launch  uwsim_dolphin_dynamics_noosg_gdb.launch
uwsim_dynamics/scripts/: QuaternionIntegration.ipynb  SymPy_Rotation.ipynb  Untitled.ipynb
uwsim_dynamics/scripts/.ipynb_checkpoints/: QuaternionIntegration-checkpoint.ipynb  SymPy_Rotation-checkpoint.ipynb
uwsim_dynamics/src/: dynamics.py  dynamics_dolphin.py  dynamics_node.cpp
uwsim_dynamics/src/tests/: dynamics_dolphin_test.py  dynamics_dolphin_test_display.py
uwsim_dynamics/src/tests/data/: dynamics_output.csv  gen_thruster_input_data.py  thrusters_input.txt
uwsim_joystick/: CMakeLists.txt  package.xml
uwsim_joystick/launch/: uwsim_joystick_frsky.launch  uwsim_joystick_logitech3d.launch  uwsim_joystick_logitechf710.launch
uwsim_joystick/src/: uwsim_joystick.cpp
uwsim_msgs/: CMakeLists.txt  package.xml
uwsim_msgs/msg/: dynamics_param.msg  full_state.msg  hil_battery.msg  hil_quaternion.msg  hil_sensor.msg  power.msg  state_control.msg
uwsim_sensor/: CMakeLists.txt  package.xml
uwsim_sensor/config/: uwsim_sensor.yaml
uwsim_sensor/include/uwsim_sensor/: uwsim_sensor.hpp
uwsim_sensor/launch/: uwsim_sensor.launch
uwsim_sensor/src/: uwsim_sensor.cpp
uwsim_sitl/: CMakeLists.txt  UWSim_SITL Arrangement.odg  package.xml
uwsim_sitl/include/uwsim_sitl/: uwsim_sitl.hpp
uwsim_sitl/launch/: uwsim_sitl.launch
uwsim_sitl/src/: uwsim_sitl.cpp
uwsim_trajectory/: CMakeLists.txt  package.xml
uwsim_trajectory/src/: uwsim_trajectory.py
